--- a/APM-Start/package.json
+++ b/APM-Start/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
+    "@sweetalert2/ngx-sweetalert2": "^10.0.0",
     "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.3.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
